# csi-http

./: .gitignore  CMakeLists.txt  README.md  build_cross_raspbian.sh  build_linux.sh  build_raspberrypi.sh  build_windows.bat  rebuild_win64_vc12.bat  setup_ubuntu.txt  setup_windows_x64.txt
csi_http/: CMakeLists.txt  avro_encoding.cpp  avro_encoding.h  csi_http.cpp  csi_http.h  json_encoding.h  spinlock.cpp  spinlock.h
csi_http/client/: http_client.cpp  http_client.h
csi_http/encoding/: avro_json_encoding.h  avro_raw_binary_encoding.h  http_rest_avro_binary_encoding.h  http_rest_avro_json_encoding.h
csi_http/server/: connection.cpp  connection.h  file_request_handler.cpp  file_request_handler.h  header.h  http_connection.cpp  http_connection.h  http_parser.cpp  http_parser.h  http_server.cpp  http_server.h  https_connection.cpp  https_connection.h  https_server.cpp  https_server.h  io_service_pool.cpp  io_service_pool.h  reply.cpp  reply.h  request.cpp  request.h  request_handler.h  server.cpp  server.h  ssl_connection.cpp  ssl_connection.h  ssl_server.cpp  ssl_server.h  unsecure_connection.cpp  unsecure_connection.h  unsecure_server.cpp  unsecure_server.h
csi_http/utils/: uri_pattern.cpp  uri_pattern.h
doc/: initial_install_raspberrypi.sh  initial_install_ubuntu_x64.sh  rebuild_all_raspberrypi.sh  rebuild_all_ubuntu_x64.sh  setup_raspberrypi.sh  setup_ubuntu.txt  setup_windows_x64.txt  third_part_versions
patches/avro/: CMakeLists.txt
samples/: CMakeLists.txt
samples/avro_defs/: gen_avro.bat  hello_world_request.h  hello_world_request.json  hello_world_response.h  hello_world_response.json
samples/avro_http_client_async_sample/: CMakeLists.txt  avro_http_client_async_sample.cpp
samples/avro_http_client_load_sample/: CMakeLists.txt  avro_http_client_load_sample.cpp
samples/avro_http_client_sample/: CMakeLists.txt  avro_http_client_sample.cpp
samples/avro_http_server_sample/: CMakeLists.txt  avro_http_server_sample.cpp
samples/avro_https_client_sample/: CMakeLists.txt  avro_https_client_sample.cpp
samples/avro_https_server_sample/: CMakeLists.txt  avro_https_server_sample.cpp
samples/csi_http_client_async_sample/: CMakeLists.txt  csi_http_client_async_sample.cpp
samples/csi_http_server_sample/: CMakeLists.txt  csi_http_server_sample.cpp
samples/csi_json_spirit/: CMakeLists.txt  version.txt
samples/hello_google_sample/: CMakeLists.txt  hello_google_sample.cpp
samples/json_spirit_http_client_async_sample/: CMakeLists.txt  csi_http_client_async_sample.cpp
samples/json_spirit_http_server_sample/: CMakeLists.txt  csi_http_server_sample.cpp
toolchains/: raspberrypi.toolchain.cmake  raspberrypi.toolchain.ia32.cmake  raspberrypi.toolchain.x64.cmake
